# NEAT-genome-utility

./: .gitmodules  README.md  pyproject.toml
neat_genome_utility/: connection.py  controller.py  creation_dialog.py  genome_widget.py  genome_window.py  graphics_connection.py  graphics_node.py  main.py  new_dialog.py  node.py  test.py  window_list.py
neat_genome_utility/creation/: creation_dialog.py  crossover_dialog.py  load_dialog.py
neat_genome_utility/genome/: genome_widget.py  genome_window.py  graphics_connection.py
