[tool.poetry]
name = "neat-genome-utility"
version = "0.1.0"
description = "An application that enables easy creation, editing and viewing of Genomes used in my implementation of NEAT https://github.com/RJW20/NEAT."
authors = ["RJW20"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyQt6 = "^6.6.1"
neat = { path = "submodules/NEAT/", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
